K8S/passports-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: passportnpservice-srv
spec:
  type: NodePort
  selector:
    app: passport
  ports:
    - name: passport
      protocol: TCP
      port: 80
      targetPort: 80
